--- a/my-primitive-paint/my-primitive-paint/Form1.resx
+++ b/my-primitive-paint/my-primitive-paint/Form1.resx
@@ -138,17 +138,17 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;pictrueDrawing.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>14</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="drawButton.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
   </data>
   <data name="drawButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>956, 405</value>
+    <value>982, 446</value>
   </data>
   <data name="drawButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>116, 67</value>
+    <value>106, 42</value>
   </data>
   <data name="drawButton.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -166,6 +166,339 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;drawButton.ZOrder" xml:space="preserve">
+    <value>13</value>
+  </data>
+  <data name="tb_x1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>930, 98</value>
+  </data>
+  <data name="tb_x1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>52, 22</value>
+  </data>
+  <data name="tb_x1.TabIndex" type="System.Int32, mscorlib">
+    <value>2</value>
+  </data>
+  <data name="&gt;&gt;tb_x1.Name" xml:space="preserve">
+    <value>tb_x1</value>
+  </data>
+  <data name="&gt;&gt;tb_x1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;tb_x1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;tb_x1.ZOrder" xml:space="preserve">
+    <value>12</value>
+  </data>
+  <data name="tb_y1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>930, 160</value>
+  </data>
+  <data name="tb_y1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>52, 22</value>
+  </data>
+  <data name="tb_y1.TabIndex" type="System.Int32, mscorlib">
+    <value>3</value>
+  </data>
+  <data name="&gt;&gt;tb_y1.Name" xml:space="preserve">
+    <value>tb_y1</value>
+  </data>
+  <data name="&gt;&gt;tb_y1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;tb_y1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;tb_y1.ZOrder" xml:space="preserve">
+    <value>11</value>
+  </data>
+  <data name="tb_y2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1008, 160</value>
+  </data>
+  <data name="tb_y2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>52, 22</value>
+  </data>
+  <data name="tb_y2.TabIndex" type="System.Int32, mscorlib">
+    <value>4</value>
+  </data>
+  <data name="&gt;&gt;tb_y2.Name" xml:space="preserve">
+    <value>tb_y2</value>
+  </data>
+  <data name="&gt;&gt;tb_y2.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;tb_y2.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;tb_y2.ZOrder" xml:space="preserve">
+    <value>10</value>
+  </data>
+  <data name="tb_x2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1008, 98</value>
+  </data>
+  <data name="tb_x2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>52, 22</value>
+  </data>
+  <data name="tb_x2.TabIndex" type="System.Int32, mscorlib">
+    <value>5</value>
+  </data>
+  <data name="&gt;&gt;tb_x2.Name" xml:space="preserve">
+    <value>tb_x2</value>
+  </data>
+  <data name="&gt;&gt;tb_x2.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;tb_x2.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;tb_x2.ZOrder" xml:space="preserve">
+    <value>9</value>
+  </data>
+  <data name="lbl_for_y2.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="lbl_for_y2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1005, 140</value>
+  </data>
+  <data name="lbl_for_y2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>23, 17</value>
+  </data>
+  <data name="lbl_for_y2.TabIndex" type="System.Int32, mscorlib">
+    <value>6</value>
+  </data>
+  <data name="lbl_for_y2.Text" xml:space="preserve">
+    <value>y2</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_y2.Name" xml:space="preserve">
+    <value>lbl_for_y2</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_y2.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_y2.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_y2.ZOrder" xml:space="preserve">
+    <value>8</value>
+  </data>
+  <data name="lbl_for_x2.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="lbl_for_x2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1005, 78</value>
+  </data>
+  <data name="lbl_for_x2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>22, 17</value>
+  </data>
+  <data name="lbl_for_x2.TabIndex" type="System.Int32, mscorlib">
+    <value>7</value>
+  </data>
+  <data name="lbl_for_x2.Text" xml:space="preserve">
+    <value>x2</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_x2.Name" xml:space="preserve">
+    <value>lbl_for_x2</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_x2.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_x2.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_x2.ZOrder" xml:space="preserve">
+    <value>7</value>
+  </data>
+  <data name="lbl_for_y1.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="lbl_for_y1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>927, 140</value>
+  </data>
+  <data name="lbl_for_y1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>23, 17</value>
+  </data>
+  <data name="lbl_for_y1.TabIndex" type="System.Int32, mscorlib">
+    <value>8</value>
+  </data>
+  <data name="lbl_for_y1.Text" xml:space="preserve">
+    <value>y1</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_y1.Name" xml:space="preserve">
+    <value>lbl_for_y1</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_y1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_y1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_y1.ZOrder" xml:space="preserve">
+    <value>6</value>
+  </data>
+  <data name="lbl_for_x1.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="lbl_for_x1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>927, 78</value>
+  </data>
+  <data name="lbl_for_x1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>22, 17</value>
+  </data>
+  <data name="lbl_for_x1.TabIndex" type="System.Int32, mscorlib">
+    <value>9</value>
+  </data>
+  <data name="lbl_for_x1.Text" xml:space="preserve">
+    <value>x1</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_x1.Name" xml:space="preserve">
+    <value>lbl_for_x1</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_x1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_x1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;lbl_for_x1.ZOrder" xml:space="preserve">
+    <value>5</value>
+  </data>
+  <data name="rb_square.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="rb_square.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="rb_square.Location" type="System.Drawing.Point, System.Drawing">
+    <value>930, 230</value>
+  </data>
+  <data name="rb_square.Size" type="System.Drawing.Size, System.Drawing">
+    <value>84, 21</value>
+  </data>
+  <data name="rb_square.TabIndex" type="System.Int32, mscorlib">
+    <value>10</value>
+  </data>
+  <data name="rb_square.Text" xml:space="preserve">
+    <value>Квадрат</value>
+  </data>
+  <data name="&gt;&gt;rb_square.Name" xml:space="preserve">
+    <value>rb_square</value>
+  </data>
+  <data name="&gt;&gt;rb_square.Type" xml:space="preserve">
+    <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;rb_square.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;rb_square.ZOrder" xml:space="preserve">
+    <value>4</value>
+  </data>
+  <data name="rb_reactangle.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="rb_reactangle.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="rb_reactangle.Location" type="System.Drawing.Point, System.Drawing">
+    <value>930, 257</value>
+  </data>
+  <data name="rb_reactangle.Size" type="System.Drawing.Size, System.Drawing">
+    <value>130, 21</value>
+  </data>
+  <data name="rb_reactangle.TabIndex" type="System.Int32, mscorlib">
+    <value>12</value>
+  </data>
+  <data name="rb_reactangle.Text" xml:space="preserve">
+    <value>Прямоугольник</value>
+  </data>
+  <data name="&gt;&gt;rb_reactangle.Name" xml:space="preserve">
+    <value>rb_reactangle</value>
+  </data>
+  <data name="&gt;&gt;rb_reactangle.Type" xml:space="preserve">
+    <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;rb_reactangle.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;rb_reactangle.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
+  <data name="rb_ellipse.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="rb_ellipse.Location" type="System.Drawing.Point, System.Drawing">
+    <value>930, 284</value>
+  </data>
+  <data name="rb_ellipse.Size" type="System.Drawing.Size, System.Drawing">
+    <value>69, 21</value>
+  </data>
+  <data name="rb_ellipse.TabIndex" type="System.Int32, mscorlib">
+    <value>13</value>
+  </data>
+  <data name="rb_ellipse.Text" xml:space="preserve">
+    <value>Элипс</value>
+  </data>
+  <data name="&gt;&gt;rb_ellipse.Name" xml:space="preserve">
+    <value>rb_ellipse</value>
+  </data>
+  <data name="&gt;&gt;rb_ellipse.Type" xml:space="preserve">
+    <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;rb_ellipse.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;rb_ellipse.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
+  <data name="rb_circle.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="rb_circle.Location" type="System.Drawing.Point, System.Drawing">
+    <value>930, 311</value>
+  </data>
+  <data name="rb_circle.Size" type="System.Drawing.Size, System.Drawing">
+    <value>58, 21</value>
+  </data>
+  <data name="rb_circle.TabIndex" type="System.Int32, mscorlib">
+    <value>14</value>
+  </data>
+  <data name="rb_circle.Text" xml:space="preserve">
+    <value>Круг</value>
+  </data>
+  <data name="&gt;&gt;rb_circle.Name" xml:space="preserve">
+    <value>rb_circle</value>
+  </data>
+  <data name="&gt;&gt;rb_circle.Type" xml:space="preserve">
+    <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;rb_circle.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;rb_circle.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="draw.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
+    <value>Popup</value>
+  </data>
+  <data name="draw.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1038, 311</value>
+  </data>
+  <data name="draw.Size" type="System.Drawing.Size, System.Drawing">
+    <value>75, 23</value>
+  </data>
+  <data name="draw.TabIndex" type="System.Int32, mscorlib">
+    <value>15</value>
+  </data>
+  <data name="draw.Text" xml:space="preserve">
+    <value>Draw</value>
+  </data>
+  <data name="&gt;&gt;draw.Name" xml:space="preserve">
+    <value>draw</value>
+  </data>
+  <data name="&gt;&gt;draw.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;draw.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;draw.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -175,7 +508,7 @@
     <value>8, 16</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>1125, 680</value>
+    <value>1168, 680</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>my-paint</value>
